# prepona

./: Cargo.toml  LICENSE  README.md
benches/: edge_descriptor_edge.rs  edge_descriptor_hyperedge.rs  edge_descriptor_hyperedge_dir.rs  edge_descriptor_k_uniform_hyperedge.rs  edge_descriptor_k_uniform_hyperedge_dir.rs
src/: cfgs.rs  error.rs  lib.rs  macros.rs  prelude.rs
src/algo/: bellman_ford.rs  connected_components.rs  dijkstra.rs  err.rs  error.rs  errors.rs  eulerian.rs  floyd_warshall.rs  has_cycle.rs  kruskal.rs  mod.rs  prop_tests.rs  topological_sort.rs  vertex_edge_cut.rs
src/common/: dyn_iter.rs  id_map.rs  mod.rs
src/doc/: definitions.rs  mod.rs  notations.rs
src/filter/: filter.rs  mod.rs  reverse.rs  view.rs
src/give/: dir.rs  edge.rs  edge_par.rs  error.rs  map.rs  mod.rs  node.rs  node_par.rs
src/graph/: error.rs  errors.rs  mod.rs  simple_graph.rs
src/make/: complete_graph.rs  cycle_graph.rs  empty_graph.rs  mod.rs  path_graph.rs  star_graph.rs  wheel_graph.rs
src/misc/: inf.rs  mod.rs  ufind.rs  union_find.rs
src/prop/: edge.rs  edge_par.rs  mod.rs  node.rs  node_par.rs
src/provide/: dir.rs  edge.rs  edge_par.rs  err.rs  error.rs  id_map.rs  map.rs  mod.rs  node.rs  node_par.rs  storage.rs  test_util.rs  vertex.rs  view.rs
src/storage/: common.rs  edge.rs  error.rs  errors.rs  gen.rs  mod.rs  prop_tests.rs  vertex.rs
src/test_utils/: mod.rs
src/traversal/: bfs.rs  dfs.rs  mod.rs
src/view/: complement.rs  directed_view.rs  errors.rs  filter.rs  generic_view.rs  iter.rs  mod.rs  reverse.rs  reverse_view.rs  selector.rs  (+4 more)
(+113 files in other folders)
