[package]
name = "prepona"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.38"
rayon = { version = "1.6.1", optional = true }
itertools = { version = "0.10.5", optional = true }

[dev-dependencies]
quickcheck = "1.0.3"

[features]
parallel = ["dep:rayon"]
generate = ["dep:itertools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
