[package]
name = "prepona"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.38"
rayon = { version = "1.6.1", optional = true }
itertools = "0.10.5"

[dev-dependencies]
quickcheck = "1.0.3"

[features]
parallel = ["dep:rayon"]
generate = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
